[package]
name = "glyphs-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.8.0"
ndarray = "0.15.6"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
relative-path = "1.9.2"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
debug = true
